--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "motion": "^12.23.19",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "react-starfield": "^1.0.3",
     "swiper": "^12.0.1",
